--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mines Sweaper</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body oncontextmenu="return false" onload="initGame()">
     <h1>Mine Sweeper</h1>
@@ -34,7 +34,7 @@
 
 <footer class="MyName"><h2>Shaked Golan</h2></footer>
 
-    <script src="/js/utility.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/utility.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
