--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <button class="changelevel" onclick="changeDifficulty(this)">Easy (16)</button>
     <button class="changelevel" onclick="changeDifficulty(this)">Hard (64)</button>
     <button class="changelevel" onclick="changeDifficulty(this)">Extreme (144)</button>
+    <div class="hintsBar"></div>
     <div>
     <table class="boardGame" border="1" cellpadding="10">
         <tbody class="board">
@@ -34,7 +35,7 @@
 
 <footer class="MyName"><h2>Shaked Golan</h2></footer>
 
-    <script src="./js/utility.js"></script>
+    <script src="./js/utility.js""></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
